--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,13 +3,15 @@ sonar.projectKey=RESTJerseyEjemplo
 sonar.projectName=RESTJerseyEjemplo
 sonar.projectVersion=0.0.1-SNAPSHOT
 sonar.language=java
+sonar.sources=RESTJerseyEjemplo/src/main/java
+sonar.java.binaries=RESTJerseyEjemplo/bin/src/main/java
 
 #Multiple modules
-sonar.modules=ejb
+#sonar.modules=ejb,web
 
 
 #ejb
-ejb.sonar.projectName=RESTJerseyEjemplo web
-ejb.sonar.projectBaseDir=.
-ejb.sonar.sources=./RESTJerseyEjemplo/RESTJerseyEjemplo/src/com.crunchify.restjersey/java
-ejb.sonar.java.binaries=./RESTJerseyEjemplo/RESTJerseyEjemplo/target/classes
+#ejb.sonar.projectName=RESTJerseyEjemplo web
+#ejb.sonar.projectBaseDir=.
+#ejb.sonar.sources=./RESTJerseyEjemplo/RESTJerseyEjemplo/src/com.crunchify.restjersey/java
+#ejb.sonar.java.binaries=./RESTJerseyEjemplo/RESTJerseyEjemplo/target/classes
