commit cambios sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,8 @@ sonar.projectKey=RESTJerseyEjemplo
 sonar.projectName=RESTJerseyEjemplo
 sonar.projectVersion=0.0.1-SNAPSHOT
 sonar.language=java
-sonar.sources=RESTJerseyEjemplo/src/main/java
-sonar.java.binaries=RESTJerseyEjemplo/bin/src/main/java
+sonar.sources=src/main/java
+sonar.java.binaries=bin/src/main/java
 
 #Multiple modules
 #sonar.modules=ejb,web
