--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=RESTJerseyEjemplo
 sonar.projectName=RESTJerseyEjemplo
 sonar.projectVersion=0.0.1-SNAPSHOT
 sonar.language=java
-sonar.sources=./RESTJerseyEjemplo/src/com.crunchify.restjersey/java
+sonar.sources=./RESTJerseyEjemplo/src/com/crunchify/restjersey/java
 sonar.java.binaries=./RESTJerseyEjemplo/target/classes
 
 #Multiple modules
