--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,8 @@ sonar.projectKey=RESTJerseyEjemplo
 sonar.projectName=RESTJerseyEjemplo
 sonar.projectVersion=0.0.1-SNAPSHOT
 sonar.language=java
-sonar.sources=RESTJerseyEjemplo/src/com/crunchify/restjersey/java
-sonar.java.binaries=RESTJerseyEjemplo/target/classes
+sonar.sources=src/com/crunchify/restjersey/java
+sonar.java.binaries=target/classes
 
 #Multiple modules
 #sonar.modules=ejb,web
