--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,8 @@ sonar.projectKey=RESTJerseyEjemplo
 sonar.projectName=RESTJerseyEjemplo
 sonar.projectVersion=0.0.1-SNAPSHOT
 sonar.language=java
-sonar.sources=RESTJerseyEjemplo/*.*
-sonar.java.binaries=var/jenkins_home/workspace/RESTJerseyEjemplo/target/classes
+#sonar.sources=RESTJerseyEjemplo/*.*
+#sonar.java.binaries=var/jenkins_home/workspace/RESTJerseyEjemplo/target/classes
 
 #Multiple modules
 #sonar.modules=ejb,web
