--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=RESTJerseyEjemplo
 sonar.projectVersion=0.0.1-SNAPSHOT
 sonar.language=java
 #sonar.sources=RESTJerseyEjemplo/*.*
-#sonar.java.binaries=var/jenkins_home/workspace/RESTJerseyEjemplo/target/classes
+sonar.java.binaries=.
 
 #Multiple modules
 #sonar.modules=ejb,web
